navbar con menu mobile

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </ul>
         </div>
 
-        <div class="menu-container-1 inactive">
-            <ul class="menu-container-2">
+        <div class="menu-desktop inactive">
+            <ul class="menu-container">
                 <li class="list-1">
                     <a class="text-1" href="/">My Orders</a> 
                 </li>
@@ -69,7 +69,47 @@
             </ul>
         </div>
 
+        <div class="menu-mobile inactive">
+            <ul class="menu-container-mobile">
+                <p class="text-1">CATEGORIES</p>
+                <li class="list-1">
+                    <a class="text-1" href="/">All</a> 
+                </li>
+                <li class="list-1">
+                    <a class="text-1" href="/">Clothes</a>
+                </li>
+                <li class="list-1">
+                    <a class="text-1" href="/">Electronics</a>
+                </li>
+                <li class="list-1">
+                    <a class="text-1" href="/">Furnitures</a>
+                </li>
+                <li class="list-1">
+                    <a class="text-1" href="/">Toys</a>
+                </li>
+                <li class="list-1">
+                    <a class="text-1" href="/">Others</a>
+                </li>
+            </ul>
+            <ul class="menu-container-mobile">
+                <li class="list-2">
+                    <a class="text-1" href="/">My orders</a>
+                </li>
+                <li class="list-1">
+                    <a class="text-1" href="/">My account</a>
+                </li>
+            </ul>
+            <div class="menu-container-mobile footer-menu-mobile">
+                <p  class="text-3"> mariajose@gmail.com</p>
+                <p>
+                    <a class="text-2" href="/">Sign out</a>
+                </p>
+            </div>
+        </div>
+
     </nav>
+
+    
     <script src="./index.js"></script>
 </body>
 </html>
