Tienda online terminada

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
 
             <ul class="categories">
             <li> 
-                <a href="/">All</a>
+                <a href="/" data-category="all">All</a>
             </li>
             <li>
-                <a href="/">Clothes</a>
+                <a href="/" data-category="clothes">Clothes</a>
             </li>
             <li>
-                <a href="/">Electronics</a>
+                <a href="/" data-category="electronics">Electronics</a>
             </li>
             <li>
-                <a href="/">Furniture</a>
+                <a href="/" data-category="furniture">Furniture</a>
             </li>
             <li>
-                <a href="/">Toys</a>
+                <a href="/" data-category="toys">Toys</a>
             </li>
             <li>
-                <a href="/">Others</a>
+                <a href="/" data-category="others">Others</a>
             </li>
             </ul>
         </div>
@@ -117,14 +117,6 @@
         </div>
 
         <ul class="list-items">
-            <!--<li class="product-cart-abstract">
-                <img src="./assets/peluche.jpg" alt="peluche" class="img-cart-product">
-                <p class="text-4">Peluche de oso</p>
-                <p class="text-1">$50</p>
-                <img src="./icons/icon_close.png" alt="close" class="close-1">
-            </li>-->
-    
-
         </ul>
 
         <div class="container-cart-buy">
